README added and synced url of the demos
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1341646 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/simpleWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/simpleWebapp/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
 
 	<servlet-mapping>
 		<servlet-name>FederationServlet</servlet-name>
-		<url-pattern>/secureservlet/fed</url-pattern>
+		<url-pattern>/secure/fedservlet</url-pattern>
 	</servlet-mapping>
 
 	<security-role>
