--- a/plugins/core/pom.xml
+++ b/plugins/core/pom.xml
@@ -47,6 +47,12 @@
 			<version>${wss4j.version}</version>
 			<scope>compile</scope>
 		</dependency>
+                <dependency>
+                    <groupId>net.sf.ehcache</groupId>
+                    <artifactId>ehcache-core</artifactId>
+                    <version>${ehcache.version}</version>
+                    <scope>compile</scope>
+                </dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-jdk14</artifactId>
