--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     </parent>
 
     <properties>
+        <ehcache.version>2.5.1</ehcache.version>
         <slf4j.version>1.6.1</slf4j.version>
         <spring.version>3.0.7.RELEASE</spring.version>
         <tomcat.version>7.0.27</tomcat.version>
