Support several trusted issuer, certstores, testcases refactored
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1345768 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/wsclientWebapp/webapp/pom.xml
+++ b/examples/wsclientWebapp/webapp/pom.xml
@@ -92,6 +92,10 @@
 					<artifactId>wss4j</artifactId>
 					<groupId>org.apache.ws.security</groupId>
 				</exclusion>
+                                <exclusion>
+                                        <artifactId>ehcache-core</artifactId>
+                                        <groupId>net.sf.ehcache</groupId>
+                                </exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
