--- a/plugins/core/src/test/resources/signature.properties
+++ b/plugins/core/src/test/resources/signature.properties
@@ -1,6 +1,5 @@
 org.apache.ws.security.crypto.provider=org.apache.ws.security.components.crypto.Merlin
 org.apache.ws.security.crypto.merlin.keystore.type=jks
-org.apache.ws.security.crypto.merlin.keystore.password=changeit
-#org.apache.ws.security.crypto.merlin.keystore.alias=notneeded
-org.apache.ws.security.crypto.merlin.keystore.file=sdcinternal.jks
+org.apache.ws.security.crypto.merlin.keystore.password=stsspass
+org.apache.ws.security.crypto.merlin.keystore.file=stsstore.jks
 
