--- a/plugins/core/pom.xml
+++ b/plugins/core/pom.xml
@@ -100,7 +100,7 @@
 	        <verbose>true</verbose>
  	    </configuration>
 	    </plugin>
-   		<plugin>
+	<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>2.1.2</version>
@@ -114,6 +114,19 @@
                     </execution>
                 </executions>
             </plugin>
+         <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+         </plugin>
+
         </plugins>
     </build>    
 </project>
