--- a/pom.xml
+++ b/pom.xml
@@ -526,6 +526,7 @@
                         <enableAssertions>${fediz.surefire.enable.assertions}</enableAssertions>
                         <parallel>${fediz.surefire.parallel.mode}</parallel>
                         <systemPropertyVariables>
+                            <java.io.tmpdir>${basedir}/target</java.io.tmpdir>
                             <cxf.useRandomFirstPort>true</cxf.useRandomFirstPort>
                             <org.apache.ws.commons.schema.protectReadOnlyCollections>${fediz.protect-xmlschema-collections}</org.apache.ws.commons.schema.protectReadOnlyCollections>
                             <cxf.validateServiceSchemas>${fediz.validateServices}</cxf.validateServiceSchemas>
