added readme, building, release notes and removed fediz-tomcat dependencies in examples
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1347084 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/simpleWebapp/pom.xml
+++ b/examples/simpleWebapp/pom.xml
@@ -51,15 +51,10 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Required to cast Principal to FederationPrincipal -->
         <dependency>
                 <groupId>org.apache.cxf.fediz</groupId>
                 <artifactId>fediz-core</artifactId>
-                <version>${project.version}</version>
-                <scope>provided</scope>
-        </dependency>
-        <dependency>
-                <groupId>org.apache.cxf.fediz</groupId>
-                <artifactId>fediz-tomcat</artifactId>
                 <version>${project.version}</version>
                 <scope>provided</scope>
         </dependency>
