--- a/examples/wsclientWebapp/webapp/pom.xml
+++ b/examples/wsclientWebapp/webapp/pom.xml
@@ -52,15 +52,10 @@
 			<version>${tomcat.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- Required to cast Principal to FederationPrincipal -->
 		<dependency>
 			<groupId>org.apache.cxf.fediz</groupId>
 			<artifactId>fediz-core</artifactId>
-			<version>${project.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf.fediz</groupId>
-			<artifactId>fediz-tomcat</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
