--- a/examples/wsclientWebapp/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/wsclientWebapp/webapp/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>WEB-INF/beans.xml</param-value>
+    <param-value>WEB-INF/applicationContext.xml</param-value>
   </context-param>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
