--- a/examples/wsclientWebapp/webservice/service/src/main/webapp/WEB-INF/web.xml
+++ b/examples/wsclientWebapp/webservice/service/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>		
-		<param-value>WEB-INF/beans.xml</param-value>
+		<param-value>WEB-INF/applicationContext.xml</param-value>
 	</context-param>
 
 	<listener>
