--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,12 @@
   specific language governing permissions and limitations
   under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cxf.fediz</groupId>
     <artifactId>fediz</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>Apache Fediz</name>
     <packaging>pom</packaging>
 
@@ -79,9 +77,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/fediz/trunk</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/fediz/trunk</developerConnection>
-        <url>http://svn.apache.org/repos/asf/fediz/trunk</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/fediz/tags/fediz-1.0.0</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/fediz/tags/fediz-1.0.0</developerConnection>
+        <url>http://svn.apache.org/repos/asf/fediz/tags/fediz-1.0.0</url>
     </scm>
 
     <issueManagement>
