--- a/examples/wsclientWebapp/webservice/common/pom.xml
+++ b/examples/wsclientWebapp/webservice/common/pom.xml
@@ -22,7 +22,7 @@
     <parent>
        <groupId>org.apache.cxf.fediz.examples</groupId>
        <artifactId>webservice</artifactId>
-       <version>1.0.0-SNAPSHOT</version>
+       <version>1.0.0</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples.webservice</groupId>
     <artifactId>service-common</artifactId>
