[maven-release-plugin] prepare for next development iteration
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1351865 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/wsclientWebapp/webservice/service/pom.xml
+++ b/examples/wsclientWebapp/webservice/service/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>org.apache.cxf.fediz.examples</groupId>
 		<artifactId>webservice</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>org.apache.cxf.fediz.examples.webservice</groupId>
 	<artifactId>service-war</artifactId>
