--- a/plugins/tomcat/pom.xml
+++ b/plugins/tomcat/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>org.apache.cxf.fediz</groupId>
 		<artifactId>fediz</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>fediz-tomcat</artifactId>
