--- a/examples/wsclientWebapp/webservice/service/pom.xml
+++ b/examples/wsclientWebapp/webservice/service/pom.xml
@@ -49,7 +49,7 @@
 				<version>1.1</version>
 				<configuration>
 					<server>myTomcat</server>
-					<url>http://localhost:10080/manager</url>
+					<url>http://localhost:10080/manager/text</url>
 					<path>/${project.build.finalName}</path>
 				</configuration>
 			</plugin>
