--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -16,22 +16,23 @@
   specific language governing permissions and limitations
   under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-   <modelVersion>4.0.0</modelVersion>
-   <parent>
-       <groupId>org.apache.cxf.fediz</groupId>
-       <artifactId>fediz</artifactId>
-       <version>1.0.1-SNAPSHOT</version>
-       <relativePath>../pom.xml</relativePath>
-   </parent>
-   <groupId>org.apache.cxf.fediz.examples</groupId>
-   <artifactId>examples</artifactId>
-   <name>Apache Fediz examples</name>
-   <packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.apache.cxf.fediz</groupId>
+        <artifactId>fediz</artifactId>
+        <version>1.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <groupId>org.apache.cxf.fediz</groupId>
+    <artifactId>examples</artifactId>
+    <name>Apache CXF Fediz Examples</name>
+    <packaging>pom</packaging>
 
-   <modules>
-      <module>simpleWebapp</module>
-      <module>wsclientWebapp</module>
-   </modules>
+    <modules>
+        <module>simpleWebapp</module>
+        <module>wsclientWebapp</module>
+    </modules>
 </project>
