--- a/examples/wsclientWebapp/webservice/common/pom.xml
+++ b/examples/wsclientWebapp/webservice/common/pom.xml
@@ -16,17 +16,17 @@
   specific language governing permissions and limitations
   under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-       <groupId>org.apache.cxf.fediz.examples</groupId>
-       <artifactId>webservice</artifactId>
-       <version>1.0.1-SNAPSHOT</version>
+        <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
+        <artifactId>wsclientWebapp-webservice</artifactId>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>org.apache.cxf.fediz.examples.webservice</groupId>
-    <artifactId>service-common</artifactId>
-    <name>Apache Fediz Examples - Webapp WS Client - Web Service Common</name>
+    <artifactId>wsclientWebapp-webservice-common</artifactId>
+    <name>Fediz Example: WSClientWebapp (web service common)</name>
     <packaging>jar</packaging>
 
     <dependencies>
