--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -8,27 +8,46 @@
     </description>
 	<display-name>WS Federation Tomcat Example</display-name>
 
+
+	
 	<servlet>
 		<servlet-name>FederationServlet</servlet-name>
 		<servlet-class>org.apache.cxf.fediz.service.idp.IdpServlet</servlet-class>
 		<init-param>
 			<param-name>sts.wsdl.url</param-name>
-			<param-value>https://localhost:9443/fedizidpsts/STSService?wsdl</param-value>
+			<param-value>https://localhost:9443/fedizidpsts/</param-value>
 		</init-param>
 		<init-param>
 			<param-name>sts.wsdl.service</param-name>
 			<param-value>SecurityTokenService</param-value>
 		</init-param>
 		<init-param>
-			<param-name>sts.wsdl.endpoint</param-name>
+			<param-name>sts.UT.wsdl.endpoint</param-name>
 			<param-value>TransportUT_Port</param-value>
 		</init-param>
+	    <init-param>
+			<param-name>sts.UT.uri</param-name>
+			<param-value>STSService</param-value>
+		</init-param>		
+		<init-param>
+			<param-name>sts.RP.wsdl.endpoint</param-name>
+			<param-value>Transport_Port</param-value>
+		</init-param>
+		<init-param>
+			<param-name>sts.RP.uri</param-name>
+			<param-value>STSServiceTransport</param-value>
+		</init-param>
+		<init-param>
+			<param-name>token.internal.lifetime</param-name>
+			<param-value>7200</param-value>
+		</init-param>
+		
 <!--		
 		<init-param>
 			<param-name>ws-trust-tokentype</param-name>
 			<param-value>http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1</param-value>
 		</init-param>
--->		
+-->
 	</servlet>
 
 	<servlet-mapping>
