--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.apache.cxf.fediz</groupId>
 		<artifactId>fediz</artifactId>
-		<version>1.0.2-SNAPSHOT</version>
+		<version>1.0.2</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>fediz-idp-sts</artifactId>
