[maven-release-plugin] prepare for next development iteration
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1403883 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/wsclientWebapp/webservice/common/pom.xml
+++ b/examples/wsclientWebapp/webservice/common/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
         <artifactId>wsclientWebapp-webservice</artifactId>
-        <version>1.0.2</version>
+        <version>1.0.3-SNAPSHOT</version>
     </parent>
     <artifactId>wsclientWebapp-webservice-common</artifactId>
     <name>Fediz Example: WSClientWebapp (web service common)</name>
