--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cxf.fediz</groupId>
     <artifactId>fediz</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <name>Apache Fediz</name>
     <packaging>pom</packaging>
 
@@ -77,9 +77,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/cxf/fediz/tags/fediz-1.0.2</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/cxf/fediz/tags/fediz-1.0.2</developerConnection>
-        <url>http://svn.apache.org/repos/asf/cxf/fediz/tags/fediz-1.0.2</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/cxf/fediz/trunk</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/cxf/fediz/trunk</developerConnection>
+        <url>http://svn.apache.org/repos/asf/cxf/fediz/trunk</url>
     </scm>
 
     <issueManagement>
