[FEDIZ-31] Fix example package structure
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1409977 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/simpleWebapp/pom.xml
+++ b/examples/simpleWebapp/pom.xml
@@ -26,7 +26,7 @@
         <version>1.0.3-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.apache.cxf.fediz.examples.simpleWebapp</groupId>
+    <groupId>org.apache.cxf.fediz.examples</groupId>
     <artifactId>simpleWebapp</artifactId>
     <name>Fediz Example: SimpleWebapp</name>
     <packaging>war</packaging>
