--- a/examples/wsclientWebapp/webapp/pom.xml
+++ b/examples/wsclientWebapp/webapp/pom.xml
@@ -21,11 +21,12 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
+        <groupId>org.apache.cxf.fediz.examples</groupId>
         <artifactId>wsclientWebapp</artifactId>
         <version>1.0.3-SNAPSHOT</version>
     </parent>
-    <artifactId>wsclientWebapp-webapp</artifactId>
+    <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
+    <artifactId>webapp</artifactId>
     <name>Fediz Example: WSClientWebapp (webapp)</name>
     <packaging>war</packaging>
 
