--- a/examples/wsclientWebapp/webservice/pom.xml
+++ b/examples/wsclientWebapp/webservice/pom.xml
@@ -20,11 +20,12 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
+        <groupId>org.apache.cxf.fediz.examples</groupId>
         <artifactId>wsclientWebapp</artifactId>
         <version>1.0.3-SNAPSHOT</version>
     </parent>
-    <artifactId>wsclientWebapp-webservice</artifactId>
+    <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
+    <artifactId>webservice</artifactId>
     <name>Fediz Example: WSClientWebapp (web service)</name>
     <packaging>pom</packaging>
 
