--- a/examples/wsclientWebapp/webapp/pom.xml
+++ b/examples/wsclientWebapp/webapp/pom.xml
@@ -36,8 +36,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
-            <artifactId>wsclientWebapp-webservice-common</artifactId>
+            <groupId>org.apache.cxf.fediz.examples.wsclientWebapp.webservice</groupId>
+            <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
