--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,8 @@
         <slf4j.version>1.6.5</slf4j.version>
         <spring.version>3.0.7.RELEASE</spring.version>
         <tomcat.version>7.0.27</tomcat.version>
-        <jetty.version>8.1.3.v20120416</jetty.version>
+        <jetty.version>8.1.8.v20121106</jetty.version>
+        <!--<jetty.version>7.6.8.v20121106</jetty.version>-->
         <junit.version>4.8.2</junit.version>
         <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
         <cxf.version>2.6.3</cxf.version>
