added jetty maven module
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1413790 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -32,6 +32,6 @@
    <modules>
       <module>core</module>
       <module>tomcat</module>
-      <!--<module>jetty</module>-->
+      <module>jetty</module>
    </modules>
 </project>
