--- a/plugins/jetty/pom.xml
+++ b/plugins/jetty/pom.xml
@@ -21,13 +21,11 @@
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
 			<version>${jetty.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-security</artifactId>
 			<version>${jetty.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
@@ -38,6 +36,12 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-webapp</artifactId>
+			<version>${jetty.version}</version>
+			<scope>test</scope>			
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-jsp</artifactId>
 			<version>${jetty.version}</version>
 			<scope>test</scope>
 		</dependency>
@@ -60,6 +64,41 @@
 			<version>4.2.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.htmlparser.jericho</groupId>
+			<artifactId>jericho-html</artifactId>
+			<version>3.2</version>
+			<scope>test</scope>
+		</dependency>
+		
+<!-- 
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.2.1-b03</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jsp-impl</artifactId>
+			<version>2.2.2-b06</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.geronimo.ext.tomcat</groupId>
+			<artifactId>jasper-el</artifactId>
+			<version>7.0.19.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.geronimo.bundles</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2_1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-servlet_3.0_spec</artifactId>
+			<version>1.0</version>
+		</dependency>
+ -->
+ 
 	</dependencies>
 
 	<build>
@@ -83,32 +122,69 @@
 					</execution>
 				</executions>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.4</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Implementation-Title>Apache CXF Fediz</Implementation-Title>
-                        <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
-                        <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
-                        <Implementation-Version>${project.version}</Implementation-Version>
-                        <Specification-Title>Apache CXF Fediz</Specification-Title>
-                        <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
-                        <Specification-Version>${project.version}</Specification-Version>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.3.4</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Implementation-Title>Apache CXF Fediz</Implementation-Title>
+						<Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
+						<Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
+						<Implementation-Version>${project.version}</Implementation-Version>
+						<Specification-Title>Apache CXF Fediz</Specification-Title>
+						<Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
+						<Specification-Version>${project.version}</Specification-Version>
 
-                        <Export-Package>
-                              org.apache.cxf.fediz.jetty.*;version="${project.version}"
+						<Export-Package>
+							org.apache.cxf.fediz.jetty.*;version="${project.version}"
                         </Export-Package>
-                        <Import-Package>
-                              !org.apache.cxf.fediz.jetty*,
-                              org.apache.cxf.fediz.core.*,
-                              *;resolution:=optional
+						<Import-Package>
+							!org.apache.cxf.fediz.jetty*,
+							org.apache.cxf.fediz.core.*,
+							*;resolution:=optional
                         </Import-Package>
-                    </instructions>
-                </configuration>
-            </plugin>			
+					</instructions>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.1</version>
+				<executions>
+					<execution>
+						<id>copy-idp-sts</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.apache.cxf.fediz</groupId>
+									<artifactId>fediz-idp</artifactId>
+									<version>${project.version}</version>
+									<type>war</type>
+									<overWrite>true</overWrite>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.apache.cxf.fediz</groupId>
+									<artifactId>fediz-idp-sts</artifactId>
+									<version>${project.version}</version>
+									<type>war</type>
+									<overWrite>true</overWrite>
+								</artifactItem>								
+							</artifactItems>
+							<outputAbsoluteArtifactFilename>true</outputAbsoluteArtifactFilename>
+							<outputDirectory>target</outputDirectory>
+							<overWriteSnapshots>true</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
