fixed role definitions in web.xml
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1424069 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/simpleWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/simpleWebapp/src/main/webapp/WEB-INF/web.xml
@@ -37,10 +37,16 @@
 
 	<security-role>
 		<role-name>Manager</role-name>
-		<role-name>User</role-name>
-		<role-name>Admin</role-name>
-		<role-name>Authenticated</role-name>
 	</security-role>
+	<security-role>
+		<role-name>User</role-name>
+	</security-role>
+	<security-role>
+		<role-name>Admin</role-name>
+	</security-role>
+	<security-role>
+		<role-name>Authenticated</role-name>
+	</security-role>				
 
 	<security-constraint>
 		<web-resource-collection>
