claims requested from sts
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1424070 13f79535-47bb-0310-9956-ffa450edef68

--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -155,7 +155,10 @@
 			<param-name>sts.rstr.content-type</param-name>
 			<param-value>RSTR</param-value>
 		</init-param>		
-		
+		<init-param>
+			<param-name>sts.claims.required</param-name>
+			<param-value>true</param-value>
+		</init-param>		
 	</filter>	
 
 	<filter>
