--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,7 @@
     <modules>
         <module>services</module>
         <module>plugins</module>
+        <module>systests</module>
         <module>examples</module>
         <module>apache-fediz</module>
     </modules>
@@ -601,6 +602,11 @@
                     </dependencies>
                 </plugin>
 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.3</version>
+               </plugin>
             </plugins>
         </pluginManagement>
     </build>
