Fixed wrong dependency
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1425473 13f79535-47bb-0310-9956-ffa450edef68

--- a/systests/tests/pom.xml
+++ b/systests/tests/pom.xml
@@ -118,21 +118,21 @@
 							<artifactItems>
 								<artifactItem>
 									<groupId>org.apache.cxf.fediz.systests</groupId>
-									<artifactId>fediz-idp</artifactId>
+									<artifactId>systests-fediz-idp</artifactId>
 									<version>${project.version}</version>
 									<type>war</type>
 									<overWrite>true</overWrite>
 								</artifactItem>
 								<artifactItem>
 									<groupId>org.apache.cxf.fediz.systests</groupId>
-									<artifactId>fediz-idp-sts</artifactId>
+									<artifactId>systests-fediz-idp-sts</artifactId>
 									<version>${project.version}</version>
 									<type>war</type>
 									<overWrite>true</overWrite>
 								</artifactItem>
 								<artifactItem>
 									<groupId>org.apache.cxf.fediz.systests</groupId>
-									<artifactId>simpleWebapp</artifactId>
+									<artifactId>systests-simpleWebapp</artifactId>
 									<version>${project.version}</version>
 									<type>war</type>
 									<overWrite>true</overWrite>
